js/js.translator/testData/incremental/invalidation/class/lib1/l1.0_data_class.kt
data class Demo(val x: Int) {
}
